// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering snapshots should render valid snapshot 1`] = `
<div
  className="breadcrumb-wrapper"
>
  <Route
    component={[Function]}
    isLoadingIconVisible={false}
    path="/:path"
  />
</div>
`;

exports[`rendering snapshots should render valid snapshot when loading icon visible 1`] = `
<div
  className="breadcrumb-wrapper"
>
  <div
    className="float-right"
    data-spec="header-loading-indicator"
  >
    <Component
      className="invert"
    />
  </div>
  <Route
    component={[Function]}
    isLoadingIconVisible={true}
    path="/:path"
  />
</div>
`;
